Refactor ImageConverterTest to streamline setup and enhance file handling, including dynamic file copying and improved representation checks.